--- a/index.html
+++ b/index.html
@@ -5,61 +5,67 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Studio</title>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
     <header>
-        <a href="#" lang="en">WebStudio</a>
+        <a href="./index.html" lang="en" class="logo">
+            <span class="logo-web">Web</span><span class="logo-studio">Studio</span>
+        </a>
         <nav>
-            <ul>
-            <li>
-                <a href="./index.html">Студия</a>
-            </li>
-            <li>
-                <a href="./portfolio.html">Портфолио</a>
-            </li>
-            <li>
-                <a href="#">Контакты</a>
-            </li>        
+            <ul class="site-nav list">
+                <li>
+                    <a href="./index.html" class="link current">Студия</a>
+                </li>
+                <li>
+                    <a href="./portfolio.html" class="link">Портфолио</a>
+                </li>
+                <li>
+                    <a href="#" class="link">Контакты</a>
+                </li>        
             </ul>
         </nav>
-        <ul>
+        <ul class="auth-nav list">
             <li>
-                <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+                <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
             </li>
             <li>
-                <a href="tel:+380961111111">+38 096 111 11 11</a>
+                <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
             </li>
         </ul>  
     </header>
     <main>
-        <section>
-            <h1>Эффективные решения для вашего бизнеса</h1>
-            <button type="button">Заказать услугу</button>
+        <section class="hero">
+            <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+            <button type="button" class="button">Заказать услугу</button>
         </section>
-        <section>
-            <h2>Наши преимущества</h2>
-            <ul>
+        <section class="section">
+            <h2 class="section-title">Наши преимущества</h2>
+            <ul class="features list">
                 <li>
-                    <h3>Внимание к деталям</h3>
+                    <h3 class="title">Внимание к деталям</h3>
                     <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
                 <li>
-                    <h3>Пунктуальность</h3>
+                    <h3 class="title">Пунктуальность</h3>
                     <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
                 <li>
-                    <h3>Планирование</h3>
+                    <h3 class="title">Планирование</h3>
                     <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
                 <li>
-                    <h3>Современные технологии</h3>
+                    <h3 class="title">Современные технологии</h3>
                     <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
             </ul>
         </section>
-        <section>
-            <h2>Чем мы занимаемся</h2>
-            <ul>
+        <section class="section">
+            <h2 class="section-title">Чем мы занимаемся</h2>
+            <ul class="list">
                 <li>
                     <img 
                     src="./img/about-img-1.jpg" 
@@ -83,16 +89,16 @@
                 </li>
             </ul>
         </section>
-        <section>
-            <h2>Наша команда</h2>
-            <ul>
+        <section class="section team-background">
+            <h2 class="section-title">Наша команда</h2>
+            <ul class="team list">
                 <li>
                     <img 
                     src="./img/team-img-1.jpg"
                     width="270" 
                     alt="Игорь Демьяненко"
                     >
-                    <h3>Игорь Демьяненко</h3>
+                    <h3 class="title">Игорь Демьяненко</h3>
                     <p lang="en">Product Designer</p>
                 </li>
                 <li>
@@ -101,7 +107,7 @@
                     width="270" 
                     alt="Ольга Репина"
                     >
-                    <h3>Ольга Репина</h3>
+                    <h3 class="title">Ольга Репина</h3>
                     <p lang="en">Frontend Developer</p>
                 </li>
                 <li>
@@ -110,7 +116,7 @@
                     width="270" 
                     alt="Николай Тарасов"
                     >
-                    <h3>Николай Тарасов</h3>
+                    <h3 class="title">Николай Тарасов</h3>
                     <p lang="en">Marketing</p>
                 </li>
                 <li>
@@ -119,24 +125,26 @@
                     width="270" 
                     alt="Михаил Ермаков"
                     >
-                    <h3>Михаил Ермаков</h3>
+                    <h3 class="title">Михаил Ермаков</h3>
                     <p lang="en">UI Designer</p>
                 </li>
             </ul>
         </section>
     </main>
-    <footer>
-        <a href="#" lang="en">WebStudio</a>
+    <footer class="footer">
+        <a href="./index.html" lang="en">
+            <span class="logo-web">Web</span><span class="logo-studio">Studio</span>
+        </a>
         <address>
-        <ul>
+        <ul class="list">
             <li>
-                <a href="https://goo.gl/maps/3iyzEZUhEdgraJMp6" target="_blank" rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a>
+                <a href="https://goo.gl/maps/3iyzEZUhEdgraJMp6" target="_blank" rel="noopener noreferrer" class="address-primary">г. Киев, пр-т Леси Украинки, 26</a>
             </li>
             <li>
-                <a href="mailto:info@example.com">info@example.com</a>
+                <a href="mailto:info@example.com" class="address-secondary">info@example.com</a>
             </li>
             <li>
-                <a href="tel:+380961111111">+38 096 111 11 11</a>
+                <a href="tel:+380961111111" class="address-secondary">+38 096 111 11 11</a>
             </li>
         </ul>
         </address>
