--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 </head>
 <body>
     <header>
-        <a href="./index.html" lang="en" class="logo">
-            <span class="logo-web">Web</span><span class="logo-studio">Studio</span>
+        <a href="./index.html" lang="en" class="logo link">
+            <span class="logo-web">Web</span><span class="logo-studio-header">Studio</span>
         </a>
         <nav>
             <ul class="site-nav list">
@@ -47,19 +47,19 @@
             <ul class="features list">
                 <li>
                     <h3 class="title">Внимание к деталям</h3>
-                    <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                    <p class="text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
                 <li>
                     <h3 class="title">Пунктуальность</h3>
-                    <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                    <p class="text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                 </li>
                 <li>
                     <h3 class="title">Планирование</h3>
-                    <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                    <p class="text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
                 <li>
                     <h3 class="title">Современные технологии</h3>
-                    <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                    <p class="text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
             </ul>
         </section>
@@ -99,7 +99,7 @@
                     alt="Игорь Демьяненко"
                     >
                     <h3 class="title">Игорь Демьяненко</h3>
-                    <p lang="en">Product Designer</p>
+                    <p lang="en" class="text">Product Designer</p>
                 </li>
                 <li>
                     <img 
@@ -108,7 +108,7 @@
                     alt="Ольга Репина"
                     >
                     <h3 class="title">Ольга Репина</h3>
-                    <p lang="en">Frontend Developer</p>
+                    <p lang="en" class="text">Frontend Developer</p>
                 </li>
                 <li>
                     <img 
@@ -117,7 +117,7 @@
                     alt="Николай Тарасов"
                     >
                     <h3 class="title">Николай Тарасов</h3>
-                    <p lang="en">Marketing</p>
+                    <p lang="en" class="text">Marketing</p>
                 </li>
                 <li>
                     <img 
@@ -126,25 +126,25 @@
                     alt="Михаил Ермаков"
                     >
                     <h3 class="title">Михаил Ермаков</h3>
-                    <p lang="en">UI Designer</p>
+                    <p lang="en" class="text">UI Designer</p>
                 </li>
             </ul>
         </section>
     </main>
     <footer class="footer">
-        <a href="./index.html" lang="en">
-            <span class="logo-web">Web</span><span class="logo-studio">Studio</span>
+        <a href="./index.html" lang="en" class="logo link">
+            <span class="logo-web">Web</span><span class="logo-studio-footer">Studio</span>
         </a>
         <address>
         <ul class="list">
             <li>
-                <a href="https://goo.gl/maps/3iyzEZUhEdgraJMp6" target="_blank" rel="noopener noreferrer" class="address-primary">г. Киев, пр-т Леси Украинки, 26</a>
+                <a href="https://goo.gl/maps/3iyzEZUhEdgraJMp6" target="_blank" rel="noopener noreferrer" class="link address-primary">г. Киев, пр-т Леси Украинки, 26</a>
             </li>
             <li>
-                <a href="mailto:info@example.com" class="address-secondary">info@example.com</a>
+                <a href="mailto:info@example.com" class="link address-secondary">info@example.com</a>
             </li>
             <li>
-                <a href="tel:+380961111111" class="address-secondary">+38 096 111 11 11</a>
+                <a href="tel:+380961111111" class="link address-secondary">+38 096 111 11 11</a>
             </li>
         </ul>
         </address>
